   - Bugfix: Threadsafeness of some mailbox access functions
   - Bugfix: Message when loading config file from newer gnubiff version
   - Updated Italian translation (thanks to Stefano Fabri; for version 2.1.x)
   - Bugfix: Removed no longer needed files from po/POTFILES.in
   - Feature: Gnubiff can now be started without GUI (option '--nogui')
 * Roland Stigge
   - Added reference to info pages in man page (Debian bug #335193)

Version 2.1.8
 * Robert Sowada
   - Changed version to 2.1.8
   - Backport (from gnubiff 2.2.0 CVS) of smaller fixes
   - Backport (from gnubiff 2.2.0 CVS) of newer version in config file fix
   - Updated Italian translation (thanks to Stefano Fabri)

Version 2.1.7		2005-10-31  0:43
 * Robert Sowada
   - Changed version to 2.1.7
   - Bugfix: Mistake when backporting from 2.2.0 to 2.1.6. Thanks to Maik
        Wachsmuth and Satou Kazuhito for reporting this bug.
   - Added Maik Wachsmuth and Satou Kazuhito to contributors
 * Roland Stigge
   - Added reference to info page in man page (Debian bug #335193)
    
Version 2.1.6		2005-10-09 15:51
 * Robert Sowada
   - Changed version to 2.1.6
   - Backport (from gnubiff 2.2.0 CVS) of changes for installing gnubiff into
        an arbitrary location

Version 2.1.5		2005-08-21 18:11
 * Robert Sowada
   - Changed version to 2.1.5
   - Bugfix: Checking if a FAM connection is established
   - Bugfix: Threadsafeness of FAM code
   - Bugfix: Retrying monitoring via FAM
   - Copyright message in Credits dialog updated
   - Bugfix: Finally fixed the FAM problem (bug #1221040; thanks to Hubert
        Verstraete for providing a patch)
   - Updated TODO
   - Added Hubert Verstraete to contributors
   - Bugfix: Obtaining keyboard focus automatically (thanks to Wade Berrier
        for reminding us of this bug and for providing a patch)
   - Added Wade Berrier to contributors
   - Feature: Option "pop3_max_uid_length" for dealing with buggy servers